广域网以及相关协议:PPP协议以及HDLC(*)协议:都只支持全双工通信

--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -621,3 +621,73 @@
 #### 题目
 
 ![image-20220904213451268](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042134408.png)
+
+## 3.7_1 广域网以及相关协议
+
+> 广域网更注重`资源共享`
+>
+> 局域网更注重`数据传输`		
+
+![image-20220904214435989](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209042144247.png)
+
+### PPP协议
+
+#### 特点
+
+> 点对点协议,使用最广泛的数据链路层协议
+>
+> - 拨号接入因特网时一般使用ppp协议
+> - `只支持全双工链路`
+
+#### 需要满足的要求
+
+![image-20220905082617823](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050826197.png)
+
+#### 无需满足的要求
+
+![image-20220905082756015](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050827586.png)
+
+#### 三个组成部分
+
+![image-20220905083114052](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050831691.png)
+
+#### 状态图
+
+![image-20220905083231206](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050833886.png)
+
+#### 帧格式
+
+> - `插入一个转义字符`
+>
+> - 也可以`0比特填充法`
+
+![image-20220905083845688](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050838094.png)
+
+### HDLC协议 *
+
+> 同步,面向比特传输
+>
+> `0比特插入法`,易于硬件实现
+
+![image-20220905084215800](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050842058.png)
+
+#### 三种站
+
+![image-20220905084708163](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050847761.png)
+
+#### 帧格式
+
+> 控制字段:`无奸细`
+
+![image-20220905085107736](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050851461.png)
+
+### PPP协议 & HDLC协议
+
+>`通过序号和确认机制`实现可靠传输需要检错
+>在OSI`下三层需要尽最大能力交付`
+>也就是需要保证速度,这样用户体验上效果就很差,延迟很大
+>因此可靠性可交由传输层实现
+
+### 总结
+
+![image-20220905090604582](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050906437.png)
