数据链路层设备:物理层扩展以太网(主干集线器:实现跨冲突域的通信,,扩大了冲突域名 ,,但是冲突概率变大,效率变低了)        链路层扩展以太网(网桥和交换机)       网桥(透明网桥和源路由网桥)    交换机(多借口网桥:直通式交换机和存储转发式交换机)          物理层无法屏蔽冲突域,链路层无法屏蔽广播域,,网络层都可以

--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -691,3 +691,59 @@
 ### 总结
 
 ![image-20220905090604582](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050906437.png)
+
+## 3.8_1 数据链路层设备
+
+### 物理层拓展以太网
+
+![image-20220905093919665](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050939529.png)
+
+#### 主干集线器
+
+> 1. 实现跨冲突域通信
+> 2. 扩大了冲突域
+> 3. 但冲突概率变大,,效率变低了
+
+![image-20220905094301443](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220905094301443.png)
+
+### 链路层扩展以太网
+
+![image-20220905095011561](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209050950172.png)
+
+#### 透明网桥
+
+> `自学习`构建网桥转发表
+
+![image-20220905100313561](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051003388.png)
+
+#### 源路由网桥
+
+![image-20220905100507543](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051005637.png)
+
+### 交换机(多接口网桥)
+
+![image-20220905100842485](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051008052.png)
+
+#### 交换方式
+
+![image-20220905101118498](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051011705.png)
+
+#### 网桥自学习功能
+
+![image-20220905101318959](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051013064.png)
+
+#### 交换机自学习功能
+
+![image-20220905102743737](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051027913.png)
+
+### 冲突域和广播域
+
+![image-20220905103105249](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051031697.png)
+
+例题
+
+![image-20220905103200461](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051032447.png)
+
+### 总结
+
+![image-20220905103553862](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051035579.png)
