--- a/计算机网络/第三章-数据链路层.md
+++ b/计算机网络/第三章-数据链路层.md
@@ -704,7 +704,7 @@
 > 2. 扩大了冲突域
 > 3. 但冲突概率变大,,效率变低了
 
-![image-20220905094301443](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220905094301443.png)
+![image-20220905094301443](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051044450.png)
 
 ### 链路层扩展以太网
 
