路由器功能:1.数据平面(转发) 2.控制平面(路由选择)     控制平面分为传统方法和SDN(软件定义)方法  : 区别就在于路由选择的部分是否和转发在一个路由器中                                SDN的三个层次:1.与网络控制应用程序(SDN的大脑,实现路由选择等算法)的接口层 2.SDN控制器层次 3.受控网络设备层次(也就是路由器...)

--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -23,3 +23,57 @@
 > `流量控制`:发送方发送数据速率太快,导致接收不及,因此需要流量控制
 
 ![image-20220905150213359](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051502925.png)
+
+## 4.1_2 SDN的基本概念
+
+### 路由器功能
+
+![image-20220905151745095](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051517422.png)
+
+> 转发:距离短,,使用硬件
+>
+> 选择:距离长,,使用软件
+
+### 数据平面
+
+![image-20220905152043079](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051520857.png)
+
+### 控制平面
+
+#### 1.传统方法/每路由器法
+
+> 具体:路由器之间通过`交换路由`选择报文,
+>
+> 通过`路由选择处理器`计算出路由表和转发表
+
+![image-20220905152403112](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051524531.png)
+
+#### 2.SDN(软件定义网络)
+
+> `远程控制器`实现控制平面功能,,计算和分发转发表
+
+![image-20220905153553692](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051535888.png)
+
+> `网络控制应用程序`:真正的SDN大脑,,用于计算路由转发表等..
+
+![image-20220905154955455](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051549885.png)
+
+##### 三个层次
+
+1. 对于网络控制运用程序的`接口`层次
+2. 网络范围状态`管理`层次
+3. SDN控制器与交换机之间的`通信`层次
+
+![image-20220905155455986](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051554288.png)
+
+###### 习题
+
+![image-20220905160035385](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051600576.png)
+
+#### 对比
+
+![image-20220905154308007](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051543760.png)
+
+### 总结
+
+![image-20220905160322000](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051603966.png)
