路由算法以及路由协议:路由表=(目的网络IP地址,子网掩码,下一跳IP地址,接口)               路由算法的分类(静态路由算法(非自适应算法,必须管理员手工配置,更新慢),动态路由算法(自适应算法,路由器之间彼此交换信息,按照路由算法优化出路由表项,算法复杂))          全局性:链路状态路由算法:OSPF,所有路由器掌握完整的网络拓展和链路费用信息...       分散性:距离向量路由算法RIP:路由器只掌握物理相连邻居及链路费用...

--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -77,3 +77,21 @@
 ### 总结
 
 ![image-20220905160322000](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051603966.png)
+
+## 4.2_1路由算法及路由协议
+
+### 路由表
+
+![image-20220905161621378](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051616460.png)
+
+### 路由算法的分类
+
+![image-20220905162031672](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051620947.png)
+
+### 分层次的路由选择协议
+
+> `自治系统`内部的协议 & 自治系统之间的协议
+
+![image-20220905164156950](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051641328.png)
+
+![image-20220905164313675](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051643451.png)
