IP数据报格式:TCP/IP协议栈(5层:应用层,传输层,网络层,数据链路层,物理层)         IP数据报格式=首部(固定部分4B 以及 非固定部分,内含填充效果,保证首部长度为4B的整数倍)+数据部分(TCP/UDP)属于传输层报文,这里暂时不管

--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -95,3 +95,34 @@
 ![image-20220905164156950](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051641328.png)
 
 ![image-20220905164313675](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051643451.png)
+
+## 4.3_1 IP数据报格式
+
+### TCP/IP协议栈
+
+![image-20220905165243392](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051652831.png)
+
+### IP数据报格式
+
+> IP数据报=首部+数据部分
+>
+> - 首部:固定部分+非固定部分
+>   - 固定部分:`20B` 大小
+>
+> - 数据部分:TCP/UDP属于`传输层的报文段`
+
+![image-20220905165359676](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051654806.png)
+
+#### 首部
+
+- `首部长度`
+
+![image-20220905170220805](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051702184.png)
+
+- `协议`
+
+![image-20220905170746574](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051707747.png)
+
+- `填充`
+
+![image-20220905171202643](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220905171202643.png)
