--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -126,3 +126,27 @@
 - `填充`
 
 ![image-20220905171202643](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220905171202643.png)
+
+## 4.3_2 IP数据报分片
+
+### 最大传输单元`MTU`
+
+> 链路层数据帧可封装数据的上限
+
+![image-20220905172226175](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051722948.png)
+
+### IP数据报格式
+
+![image-20220905193048646](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051930081.png)
+
+#### 例题
+
+![image-20220905193846231](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209051938550.png)
+
+#### 各单位长度
+
+> 一种八篇的首饰
+>
+> `1`总`8`片偏移首部长度`4`
+
+![image-20220905194141404](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220905194141404.png)
