IPV4地址:IP地址发展:1.分类IP地址(也包含一些特殊IP地址和私有IP地址...)  2.子网划分IP地址  3.无分类编址CIDR

--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -150,3 +150,55 @@
 > `1`总`8`片偏移首部长度`4`
 
 ![image-20220905194141404](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220905194141404.png)
+
+## 4.3_3 IPV4地址
+
+### IP地址
+
+> 哪一个网络的哪一个主机的标识符:表示一个位置
+
+![image-20220905203010148](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052030174.png)
+
+![image-20220905203231507](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052032449.png)
+
+#### 分类IP地址
+
+> `点分十进制`
+
+![image-20220905203825766](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052038154.png)
+
+##### 互联网中的IP地址
+
+![image-20220905204228233](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052042912.png)
+
+##### 分类
+
+![image-20220905204347824](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052043224.png)
+
+##### 特殊IP地址
+
+> 路由器不转发:因为路由器可以隔离广播域...
+
+![image-20220905205418237](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052054929.png)
+
+##### 私有IP地址
+
+> `NAT`协议可以实现内部IP地址和共有IP地址通信
+
+![image-20220905205632510](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052056999.png)
+
+> A类地址:如果网络号全1
+>
+> 也就是127,不能支配网络
+>
+> 因为这是一个`环回测试地址`,比较特殊
+
+![image-20220905210248385](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052102404.png)
+
+[子网的划分](#4.3_5 子网划分和子网掩码)
+
+[构成超网(无分类编址方法)](#4.3_6 无分类编址CIDR)
+
+## 4.3_5 子网划分和子网掩码
+
+## 4.3_6 无分类编址CIDR
