--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -199,6 +199,18 @@
 
 [构成超网(无分类编址方法)](#4.3_6 无分类编址CIDR)
 
+## 4.3_4 网络地址转换NAT
+
+> 由于路由器对目的地址是IP"私有地址"的数据忽略不转发
+>
+> 通过`NAT`协议实现:私有地址和互联网进行通信
+>
+> - 路由器安装上`NAT软件`,称为NAT路由器
+> - 至少有一个外部全球IP地址
+> - 维护一个`NAT转换表`
+
+![image-20220905212231954](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052122219.png)
+
 ## 4.3_5 子网划分和子网掩码
 
 ## 4.3_6 无分类编址CIDR
