子网划分以及子网掩码:::由于分类IP地址的缺点(IP地址空间的利用率有时很低,并且两级IP地址很不灵活...),因此子网划分,使得总体上是一个网络,,内部可以灵活的处理分配...     目的IP地址&子网掩码=划分后的网络地址=(IP分类的真实网络号,子网号,主机号)       路由表(1.目的网络地址,目的网络子掩码,下一跳地址(路由器的端口,网络地址等....))     子网分组的转发算法:1.提取目的IP地址 2.IP地址和子网掩码相&,得到网络号,判断是否能直接在这个路由器直接交付,,否则交由特定主机路由,检查是否有路径(下一跳的方式检查)  否则交由默认路由0.0.0.0 ,最后实在不行,则丢弃,报告转发出错.....

--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -179,7 +179,7 @@
 
 > 路由器不转发:因为路由器可以隔离广播域...
 
-![image-20220905205418237](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052054929.png)
+![image-20220906092218869](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209060923150.png)
 
 ##### 私有IP地址
 
@@ -213,4 +213,43 @@
 
 ## 4.3_5 子网划分和子网掩码
 
+![image-20220905213026517](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052130962.png)
+
+![image-20220905213157547](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052131011.png)
+
+### 划分过程
+
+![image-20220905213806072](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209052138851.png)
+
+### 子网掩码
+
+> 子网掩码与IP地址诸位相`&`,就得到`子网网络地址`
+
+![image-20220905214334691](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220905214334691.png)
+
+#### 习题
+
+1. 
+
+![image-20220906090233050](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209060902797.png)
+
+> 但是,即使是IP地址相同,如果子网掩码不同,因此所在的网络以及主机数目也是不同的
+
+2. 
+
+> - `广播分组:目的地址主机号全1`
+>
+> - 子网掩码确认`(真实网络号+子网号,主机号)`的位数
+> - 根据IP地址`分类`,得出真实网络号的位数
+>   - 得到子网号
+> - 保持(真实网络号,子网号)不变,,主机号根据情况而定
+>   - `目的地址=(真实网络号,子网号,主机号)`
+
+![image-20220906094107565](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209060941008.png)
+
+### 子网分组的转发算法
+
+![image-20220906103519604](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061035923.png)
+
 ## 4.3_6 无分类编址CIDR
+
