无分类编址(CIDR):即使可以子网划分,但也是建立在分类IP地址上,,,由于B类IP地址性价比高,因此比较抢手,越来越少..          特此采用无分类编址CIDR(网络前缀,主机号)   特点:1.消除了传统的ABC类地址以及划分子网概念,直接采用前缀   2.融合子网地址和子网掩码,方便子网划分                构成超网:网络号求交集            最长前缀匹配(目的IP地址 & 各网络的子网掩码,,,如果匹配成功,则取前缀越长,地址块越小,路由越具体的网络)

--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -125,7 +125,7 @@
 
 - `填充`
 
-![image-20220905171202643](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220905171202643.png)
+![image-20220905171202643](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061048714.png)
 
 ## 4.3_2 IP数据报分片
 
@@ -149,7 +149,7 @@
 >
 > `1`总`8`片偏移首部长度`4`
 
-![image-20220905194141404](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220905194141404.png)
+![image-20220905194141404](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061048716.png)
 
 ## 4.3_3 IPV4地址
 
@@ -225,7 +225,7 @@
 
 > 子网掩码与IP地址诸位相`&`,就得到`子网网络地址`
 
-![image-20220905214334691](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220905214334691.png)
+![image-20220905214334691](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061048717.png)
 
 #### 习题
 
@@ -253,3 +253,41 @@
 
 ## 4.3_6 无分类编址CIDR
 
+![image-20220906105315284](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061053896.png)
+
+### 特点
+
+![image-20220906110452424](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061104850.png)
+
+#### 例题
+
+![image-20220906111605761](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061116703.png)
+
+### 构成超网
+
+> 将多个子网`聚合`成一个较大的子网,叫做`构成超网`,或`路由聚合`
+>
+> - 划分子网:少->多 (主机号划分成子网号,进一步划分出多个地址)
+> - 构成超网:多->少 (多个网络地址融合合并成一个超网地址)
+
+![image-20220906112708024](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061127279.png)
+
+#### 例题
+
+> 核心内容:`取交集`
+
+![image-20220906113018403](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061130832.png)
+
+### 最长前缀匹配
+
+> `目的IP地址`与各个网络的`子网掩码` 相`&`
+>
+> 如果能够匹配成功,仍然需要比较
+>
+> - 比较前缀越长,地址块越小,路由越具体
+
+![image-20220906151531488](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061515467.png)
+
+#### 例题
+
+![image-20220906152431971](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061524279.png)
