ARP协议:实际上是为了解决下一跳去哪里的问题         发送数据的过程:1.在一个网段内 2.不在一个网段内    ARP高速缓存:保存了IP地址与MAC之间的映射记录....

--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -291,3 +291,32 @@
 #### 例题
 
 ![image-20220906152431971](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061524279.png)
+
+## 4.3_7 ARP协议
+
+### 发送数据的过程
+
+#### 在一个网段内
+
+- 1号和3号进行通信
+
+![image-20220906154920281](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061549769.png)
+
+#### 不在一个网段内
+
+- 1号和遥远的5号进行通信
+
+![image-20220906161451436](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061614777.png)
+
+### ARP协议
+
+> 本质上就是为了`解决下一跳去哪里`的问题
+>
+> - 为IPcheng'ci
+
+![image-20220906163907776](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061639305.png)
+
+#### 例题
+
+![image-20220906164122792](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061641951.png)
+
