--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -312,7 +312,7 @@
 
 > 本质上就是为了`解决下一跳去哪里`的问题
 >
-> - 为IPcheng'ci
+> - 为IP层次服务
 
 ![image-20220906163907776](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061639305.png)
 
@@ -320,3 +320,12 @@
 
 ![image-20220906164122792](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061641951.png)
 
+## 4.3_8 DHCP协议
+
+### 主机如何获得IP地址?
+
+![image-20220906164844150](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061648527.png)
+
+### DHCP协议
+
+![image-20220906170012516](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061700008.png)
