ICMP协议:位于网络层与传输层之间,,为了向传输层更有效的转发IP数据报          ICMP报文分为差错报告报文(5种)以及询问报文(4种)

--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -329,3 +329,40 @@
 ### DHCP协议
 
 ![image-20220906170012516](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061700008.png)
+
+## 4.3_9 ICMP协议
+
+> - `ARP`协议是网络层与数据链路层之间的
+>   - 实现IP地址与MAC地址的映射,找到`下一跳地址`
+> - `ICMP/IGMP`协议是网络层和传输层之间的
+>   - 为了向传输层更高有效的转发IP数据报
+
+![image-20220906170234312](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061702636.png)
+
+### 网际控制报文协议ICMP
+
+![image-20220906171332268](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061713693.png)
+
+#### ICMP`差错报告`报文(5种)
+
+![image-20220906171842131](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061718389.png)
+
+##### 差错报告报文数据字段
+
+> ICMP差错报告报文 = IP数据报的数据部分 
+
+##### 不应发送ICMP差错报文的情况
+
+![image-20220906172654742](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061726829.png)
+
+#### ICMP`询问`报文(4种)
+
+![image-20220906192157194](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061922170.png)
+
+### ICMP的应用
+
+- PING
+- Traceroute
+  - TTL为0时,路由器向主机发送一个`时间超过差错报告报文`,并丢弃
+
+![image-20220906192245858](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061922090.png)
