--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -366,3 +366,42 @@
   - TTL为0时,路由器向主机发送一个`时间超过差错报告报文`,并丢弃
 
 ![image-20220906192245858](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061922090.png)
+
+## 4.4_1 IPV6
+
+### 为何会有IPV6产生? 
+
+![image-20220906193303119](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061933714.png)
+
+### IPV6数据报格式
+
+> 源地址和目的地址得到了极大的扩充
+
+![image-20220906194039890](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061940547.png)
+
+![image-20220906194554932](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061945640.png)
+
+IPV4 `VS` IPV6
+
+![image-20220906195127001](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061951659.png)
+
+### IPV6地址表示形式
+
+> 双冒号法:一个IP地址只能使用一次,否则就是错的
+
+![image-20220906195352878](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061953679.png)
+
+### IPV6基本地址类型
+
+> - `多播`:包括了广播(一对多的形式)
+> - `任播`:一对多的一个通信,实质是一对一
+
+![image-20220906195625827](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209061956242.png)
+
+### IPV6->IPV4过渡策略
+
+![image-20220906200107244](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209062001847.png)
+
+### 总结
+
+![image-20220906200301051](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209062003112.png)
