RIP协议以及距离向量算法:(较小的)内部网关协议...   RIP协议维护(目的网络,距离,下一跳路由器) 即一组距离           好消息传的快,坏消息传的慢

--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -405,3 +405,76 @@ IPV4 `VS` IPV6
 ### 总结
 
 ![image-20220906200301051](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209062003112.png)
+
+## 4.5_1 RIP协议及距离向量算法
+
+### 路由选择协议分类
+
+![image-20220906201120133](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209062011971.png)
+
+### RIP协议
+
+- 是应用层协议,使用`UDP`协议出传送数据
+
+> 各路由器维护`从它自己到每一个其他目的网络的唯一最佳距离(即一组距离)`
+>
+> - 也就是`跳数最少`
+> - 路由表项=`(目的网络,距离,下一跳路由器)`
+
+![image-20220907085415543](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209070854919.png)
+
+#### 交换细节
+
+> 最终:每个路由器都会知道本自治系统任何一个网络的最短距离以及下一跳路由器的地址
+>
+> 即`收敛`
+
+![image-20220907090109877](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209070901275.png)
+
+### 距离向量算法
+
+> 路由表:
+>
+> - 如果下一跳相同,则不管距离大小,`更新最新状态`
+>
+> - 下一跳不同,,取`距离更近`
+
+![image-20220907091019271](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209070910727.png)
+
+#### 例题1
+
+![image-20220907091726546](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209070917854.png)
+
+#### 例题2
+
+> 根据其他路由器的向量(...) + 本路由器到该路由器的延迟
+>
+> 取最小值后的向量
+
+![image-20220907100656642](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071006453.png)
+
+### RIP报文格式
+
+![image-20220907101139447](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071011733.png)
+
+### RIP协议特点
+
+> 好消息传的快,坏消息传的慢(慢收敛)
+
+- 好消息
+
+![image-20220907101357705](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071013988.png)
+
+- 坏消息
+
+> 由于坏消息传的很慢,所以信息更新的慢
+>
+> 原本需要修改的消息不知道自己的消息需要修改,导致不断传递错误的消息
+>
+> 照成死循环
+
+![image-20220907101758380](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071018245.png)
+
+### 总结
+
+![image-20220907102211669](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071022052.png)
