--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -478,3 +478,38 @@ IPV4 `VS` IPV6
 ### 总结
 
 ![image-20220907102211669](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071022052.png)
+
+## 4.5_2 OSPF协议与链路状态算法
+
+> `洪泛法`:像洪水一样泛滥的传播,即为`广播`
+>
+> - 属于`网络层`
+
+![image-20220907103128083](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071031435.png)
+
+### 链路状态路由算法
+
+> 1. 本路由器向邻站给出自己的链路状态数据库信息
+> 2. 邻站:如果接收到本路由器的信息自己都有,则不处理
+>    - 否则,发送LSR链路状态请求分组,请求自己没有的和比自己更新的信息
+> 3. 使用`Dijstra`算法
+
+![image-20220907104032038](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071040450.png)
+
+### OSPF的区域
+
+> 分组明显,区域内部信息传递更加简单
+
+![image-20220907105131232](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071051850.png)
+
+### OSPF分组
+
+> 网络层协议
+>
+> 直接用IP数据报传送
+
+![image-20220907110147432](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071101570.png)
+
+### OSPF其他特点
+
+![image-20220907110415037](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071104371.png)
