--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -513,3 +513,41 @@ IPV4 `VS` IPV6
 ### OSPF其他特点
 
 ![image-20220907110415037](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071104371.png)
+
+## 4.5_3 BGP协议
+
+### 路由选择协议
+
+![image-20220907111318178](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071113148.png)
+
+### BGP协议
+
+![image-20220907111626386](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071116634.png)
+
+#### 交换信息的过程
+
+> 交换`网络可达性`信息
+>
+> - 即交换`一系列的路径向量`
+
+![image-20220907111916260](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071119089.png)
+
+![image-20220907112209533](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071122842.png)
+
+#### BGP报文格式
+
+![image-20220907160508009](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071605293.png)
+
+#### BGP协议特点
+
+![image-20220907160547872](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071605271.png)
+
+#### BGP-4的四种报文
+
+![image-20220907160711281](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071607393.png)
+
+### 三种路由协议比较
+
+![image-20220907161002132](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071610067.png)
+
+![image-20220907161137077](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071611706.png)
