--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -551,3 +551,59 @@ IPV4 `VS` IPV6
 ![image-20220907161002132](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071610067.png)
 
 ![image-20220907161137077](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071611706.png)
+
+## 4.6_1 IP组播
+
+![image-20220907161548817](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071615874.png)
+
+- 单播
+
+![image-20220907161733778](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071617968.png)
+
+- 组播
+
+![image-20220907161839523](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071618545.png)
+
+### IP组播地址(因特网)
+
+> - IP组播地址只能作为目的地址(一群共同需求的主机的`共同标识`)(`接收方`)
+>
+> - 源地址总是单播地址(`发送方`)
+
+![image-20220907162845337](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071628369.png)
+
+### 硬件组播(局域网)
+
+> 映射过程:直接将D类IP地址的`后23位`复制到48位以太网MAC地址的`01-00-5E`后面,实现映射
+
+![image-20220907165640648](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071656902.png)
+
+### IGMP协议与组播路由选择协议
+
+![image-20220907170133468](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071701712.png)
+
+#### IGMP协议
+
+> - 网际组管理协议
+>
+> - 让路由器知道本局域网`是否有主机(的进程)参加或退出了某个组播组`
+
+![image-20220907170911854](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071709960.png)
+
+##### IGMP工作的两个阶段
+
+![image-20220907171456268](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071714797.png)
+
+#### 组播路由选择协议
+
+> 目的:`找出以源主机为根节点的组转发树`
+
+![image-20220907171715435](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071717163.png)
+
+##### 常用的三种算法
+
+![image-20220907171919046](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071719306.png)
+
+### 总结
+
+![image-20220907172211485](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071722790.png)
