--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -607,3 +607,29 @@ IPV4 `VS` IPV6
 ### 总结
 
 ![image-20220907172211485](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071722790.png)
+
+## 4.7_1 移动IP
+
+![image-20220907172332117](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209071723184.png)
+
+### 概念
+
+> 设备移动,IP不动
+
+![image-20220908080819167](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080808725.png)
+
+#### 例子
+
+![image-20220908080939457](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080809214.png)
+
+![image-20220908081200916](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080812610.png)
+
+### 通信过程
+
+1. 
+
+![image-20220908081258691](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080812894.png)
+
+2. 
+
+![image-20220908081620753](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080816931.png)
