网络层设备:路由器(输入出端口对分组的处理)   三层设备的区别   路由表和路由转发(也就是转发表)

--- a/计算机网络/第四章-网络层.md
+++ b/计算机网络/第四章-网络层.md
@@ -633,3 +633,29 @@ IPV4 `VS` IPV6
 2. 
 
 ![image-20220908081620753](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080816931.png)
+
+## 4.8_1 网络层设备
+
+### 路由器
+
+![image-20220908082106226](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080821573.png)
+
+#### 输入端口对分组的处理
+
+> `查找`和`转发`是路由器交换功能中最重要的
+
+![image-20220908082257217](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080822490.png)
+
+#### 输出端口对分组的处理
+
+> 输入/出`队列溢出`导致分组丢失的主要原因
+
+![image-20220908082534900](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080825245.png)
+
+### 三层设备的区别
+
+![image-20220908082924303](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080829934.png)
+
+### 路由表和路由转发
+
+![image-20220908083306981](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080833276.png)
