--- a/计算机网络/第五章-传输层.md
+++ b/计算机网络/第五章-传输层.md
@@ -21,3 +21,25 @@
 2. 常用程序的端口号
 
 ![image-20220908091115871](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080911927.png)
+
+## 5.2_1 UDP协议
+
+![image-20220908092852541](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080928872.png)
+
+### 首部格式
+
+![image-20220908093142188](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080931271.png)
+
+### 数据报格式
+
+> `伪首部`:只在计算校验和才出现,不向上传送也不向下递交
+>
+> - UDP长度 = UDP首部8B + 数据部分长度(不含伪首部)
+
+![image-20220908093620678](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080936999.png)
+
+### UDP检验
+
+> 保证长度是`4B`的整数倍
+
+![image-20220908094301050](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080943645.png)
