TCP协议特点以及TCP报文段...

--- a/计算机网络/第五章-传输层.md
+++ b/计算机网络/第五章-传输层.md
@@ -43,3 +43,51 @@
 > 保证长度是`4B`的整数倍
 
 ![image-20220908094301050](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080943645.png)
+
+# TCP协议
+
+## 5.3_1 TCP协议特点和TCP报文段
+
+### TCP特点
+
+![image-20220908095239504](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080952678.png)
+
+#### 例子
+
+![image-20220908095418733](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209080954075.png)
+
+### !!!TCP报文段首部格式
+
+#### 1.序号
+
+![image-20220908100435078](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081005861.png)
+
+![image-20220908100710935](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081007990.png)
+
+#### 2.确认号
+
+> 类似于`ACK累计确认`
+>
+> `期望`收到对方`下一个报文段的序号`
+
+![image-20220908100943146](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081009373.png)
+
+#### 3.数据偏移(`首部长度`)
+
+![image-20220908101712240](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081019163.png)
+
+#### 4.控制位(6个)
+
+![image-20220908102558885](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081026844.png)
+
+#### 5.窗口
+
+> 接收方容纳量
+>
+> 限制发送方的数据量 
+
+![image-20220908103030866](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081030077.png)
+
+#### 6.其他
+
+![image-20220908103208500](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081032044.png)
