TCP的连接管理:三次握手,四次招手

--- a/计算机网络/第五章-传输层.md
+++ b/计算机网络/第五章-传输层.md
@@ -91,3 +91,23 @@
 #### 6.其他
 
 ![image-20220908103208500](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081032044.png)
+
+## 5.3_2 TCP连接管理
+
+![image-20220908103504898](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081035502.png)
+
+### TCP连接建立(`三次握手`)
+
+![image-20220908105005547](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081050891.png)
+
+#### SYN洪泛攻击
+
+> SYN Cookie解决
+
+![image-20220908105135465](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081051707.png)
+
+### TCP连接释放(`四次招手`)
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081054197.png" alt="image-20220908105430089" style="zoom:50%;" />
+
+![image-20220908111124295](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081111131.png)
