TCP可靠传输...1.校验:和UDP协议一样:增加伪首部,,按位取反并比较...2.序号(字节流的形式传递...序号字段指的是一个报文段的第一个字节的序号   3.确认(TCP默认是累计确认)  4.重传:超时重传,,以及自适应算法(动态改变重传时间,加权平均往返时间RTTs)   改进:快速重传

--- a/计算机网络/第五章-传输层.md
+++ b/计算机网络/第五章-传输层.md
@@ -111,3 +111,38 @@
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081054197.png" alt="image-20220908105430089" style="zoom:50%;" />
 
 ![image-20220908111124295](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081111131.png)
+
+## 5.3_3 TCP可靠传输
+
+### 校验
+
+![image-20220908111521067](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081115331.png)
+
+### 序号
+
+> TCP面向字节流,传输按照字节为单位
+>
+> - 一个序号占用一个字节
+> - `序号字段`:一个报文段第一个字节的序号
+
+![image-20220908112200262](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081122858.png)
+
+### 确认
+
+> TCP默认使用`累计确认`
+
+![image-20220908112559734](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081126505.png)
+
+### 重传
+
+> - `超时重传`
+>
+> - `自适应算法`:动态改变重传时间(加权平均往返时间)
+
+![image-20220908151442205](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081514357.png)
+
+#### 快速重传
+
+> 确认号ack=seq+1(默认+1)
+
+![image-20220908152619284](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081526725.png)
