TCP流量控制(控制发方的发送速度...):接收方 向 发送方 发送一个rwnd(接收窗口)          cwnd(拥塞窗口)

--- a/计算机网络/第五章-传输层.md
+++ b/计算机网络/第五章-传输层.md
@@ -146,3 +146,14 @@
 > 确认号ack=seq+1(默认+1)
 
 ![image-20220908152619284](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081526725.png)
+
+## 5.3_4 TCP流量控制
+
+![image-20220908153617233](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081536044.png)
+
+### 例子
+
+![image-20220908155939493](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081559437.png)
+
+![image-20220908155959339](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081600103.png)
+
