--- a/计算机网络/第五章-传输层.md
+++ b/计算机网络/第五章-传输层.md
@@ -157,3 +157,30 @@
 
 ![image-20220908155959339](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081600103.png)
 
+## 5.3_5 TCP拥塞控制
+
+![image-20220908161222762](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081612932.png)
+
+### 拥塞控制四种算法
+
+> 接收窗口:接收方,,反映接收方接收能力
+>
+> 拥塞窗口:发送方,,反映网络当前容量
+
+![image-20220908164050481](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081640920.png)
+
+#### 1.慢开始和拥塞避免
+
+![image-20220908164629220](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081646254.png)
+
+![image-20220908165348853](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081653225.png)
+
+#### 2.快重传和快恢复
+
+> 快重传:连续收到3个`冗余ack`
+>
+> 快恢复:`cwnd`直接降低到重置的`ssthresh`,而不是直接降到0再慢开始
+
+![image-20220908165633992](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081656162.png)
+
+ 
