--- a/计算机网络/第六章-应用层.md
+++ b/计算机网络/第六章-应用层.md
@@ -19,3 +19,26 @@
 > 缺点:不安全
 
 ![image-20220908172823021](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081728358.png)
+
+## 6.2_1 域名解析系统`DNS`
+
+> DNS:实现域名->IP地址的解析转换
+
+![image-20220908193406916](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081934005.png)
+
+### 域名
+
+![image-20220908193745994](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081937244.png)
+
+- 域名树
+
+![image-20220908193856848](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081939050.png)
+
+### 域名服务器
+
+![image-20220908195012352](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081950768.png)
+
+### 域名解析过程
+
+![image-20220908195856828](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081958983.png)
+
