文件传输协议FTP以及工作原理

--- a/计算机网络/第六章-应用层.md
+++ b/计算机网络/第六章-应用层.md
@@ -42,3 +42,23 @@
 
 ![image-20220908195856828](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209081958983.png)
 
+## 6.3_1 文件传输协议FTP
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082011907.png" alt="image-20220908201145598" style="zoom:50%;" />
+
+### FTP服务器和用户端
+
+![image-20220908201443512](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082014599.png)
+
+### FTP工作原理
+
+> 基于TCP可靠连接
+
+![image-20220908201827743](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082018443.png)
+
+![image-20220908202315021](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082023497.png)
+
+> 传输模式:
+>
+> 1. 文本模式:ASCII模式,以文本序列传输数据
+> 2. 二进制模式:Binary模式,以二进制序列传输数据
