--- a/计算机网络/第六章-应用层.md
+++ b/计算机网络/第六章-应用层.md
@@ -53,6 +53,9 @@
 ### FTP工作原理
 
 > 基于TCP可靠连接
+>
+> - TCP`控制`传送端
+> - TCP`数据`传送端
 
 ![image-20220908201827743](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082018443.png)
 
@@ -62,3 +65,53 @@
 >
 > 1. 文本模式:ASCII模式,以文本序列传输数据
 > 2. 二进制模式:Binary模式,以二进制序列传输数据
+
+## 6.4_1 电子邮件
+
+### 概述
+
+#### 1.信息格式
+
+![image-20220908202942599](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082029353.png)
+
+#### 2.组成结构
+
+> SMTP:发
+>
+> POP3:收
+
+![image-20220908204457887](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082045668.png)
+
+![image-20220908204659782](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082047570.png)
+
+### 简单邮件传送协议SMTP
+
+![image-20220908204857905](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082049853.png)
+
+#### 阶段
+
+> `A`客户端发送方,`B`服务端接收方
+
+![image-20220908205745482](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082057510.png)
+
+#### 缺点 & MIME协议
+
+![image-20220908211858250](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082119433.png)
+
+### 邮局协议POP3
+
+![image-20220908212030870](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082120056.png)
+
+### 网际报文存取协议IMAP
+
+> 比POP3更加灵活
+
+![image-20220908212305260](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082123988.png)
+
+### 基于万维网的电子邮件
+
+![image-20220908212454282](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082124542.png)
+
+### 总结
+
+![image-20220908212535241](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082125359.png)
