--- a/计算机网络/第六章-应用层.md
+++ b/计算机网络/第六章-应用层.md
@@ -115,3 +115,34 @@
 ### 总结
 
 ![image-20220908212535241](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209082125359.png)
+
+## 6.5_1 万维网和HTTP协议
+
+![image-20220909073604083](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209090736168.png)
+
+### 超文本传输协议HTTP
+
+> 如何上网 以及 如何向服务器请求资源的规定
+
+![image-20220909073937528](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209090739436.png)
+
+#### HTTP特点
+
+> 连接方式:
+>
+> - 持久连接(再次请求资源时,`不需要`再经过三次握手)
+>   - 非流水线
+>     - 发送一个请求,只有收到回应之后才能再发请求
+>   - 流水线
+>     - 类似于`GBN`协议,,可以连续发送一连串的请求,等待回应
+> - 非持久连接(再次请求资源时,`需要`再经过三次握手)
+
+![image-20220909074232284](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209090742013.png)
+
+#### HTTP协议的报文结构
+
+![image-20220909075617426](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209090756782.png)
+
+##### 例子
+
+![image-20220909075914681](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202209090759920.png)
